# pawn

./: .clang-tidy  .gitattributes  CMakeLists.txt  CMakePresets.json  COPYRIGHT.md  README.md  conanfile.py  iwyu.imp
.github/actions/install-apt-packages/: action.yml
.github/actions/install-clang/: action.yml
.github/actions/install-cppcheck/: action.yml
.github/actions/install-gcc/: action.yml
.github/actions/install-iwyu/: action.yml
.github/actions/install-vulkan-sdk/: action.yml
.github/actions/setup-conan/: action.yml
.github/workflows/: ci.yml  sanitizers.yml  static-analysis.yml
ci/conan/: clang-asan-leak-undefined  gcc-tsan  linux-hardened  msvc-analyze  msvc-asan  msvc-hardened  static-analysis
cmake/: clang-tidy.cmake  cppcheck.cmake  glslc.cmake  iwyu.cmake  project-options.cmake
conan/: dependencies
conan/opt/: linux-hardening
src/: CMakeLists.txt
src/cppext/: CMakeLists.txt
src/cppext/include/: cppext_numeric.hpp  cppext_pragma_warning.hpp
src/pawn/: CMakeLists.txt
src/pawn/shaders/: outline.frag  outline.vert  scene.frag  scene.vert
src/pawn/src/: chess.hpp  chess_game.cpp  chess_game.hpp  pawn.m.cpp  scene.cpp  scene.hpp  uci_engine.cpp  uci_engine.hpp  uci_parser.cpp  uci_parser.hpp
src/pawn/test/: uci_parser.t.cpp
src/vkrndr/: CMakeLists.txt
src/vkrndr/include/: gltf_manager.hpp  imgui_render_layer.hpp  sdl_window.hpp  vulkan_buffer.hpp  vulkan_commands.hpp  vulkan_depth_buffer.hpp  vulkan_device.hpp  vulkan_image.hpp  vulkan_memory.hpp  vulkan_pipeline.hpp  vulkan_queue.hpp  vulkan_renderer.hpp  vulkan_scene.hpp  vulkan_swap_chain.hpp  vulkan_utility.hpp  vulkan_window.hpp
src/vkrndr/src/: font_manager.cpp  gltf_manager.cpp  imgui_render_layer.cpp  sdl_window.cpp  vulkan_buffer.cpp  vulkan_commands.cpp  vulkan_context.cpp  vulkan_depth_buffer.cpp  vulkan_device.cpp  vulkan_image.cpp  vulkan_memory.cpp  vulkan_pipeline.cpp  vulkan_queue.cpp  vulkan_renderer.cpp  vulkan_swap_chain.cpp  vulkan_utility.cpp
